--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get: ^4.6.5
   firebase_core: ^2.7.0
   firebase_auth: ^4.2.9
+  google_sign_in: ^6.0.2
 
 dev_dependencies:
   flutter_test:
