--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   firebase_auth: ^4.2.9
   google_sign_in: ^6.0.2
   flutter_facebook_auth: ^5.0.8
+  cloud_firestore: ^4.4.4
+  dio: ^5.0.1
 
 dev_dependencies:
   flutter_test:
