--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_facebook_auth: ^5.0.8
   cloud_firestore: ^4.4.4
   dio: ^5.0.1
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
